# rye-monorepo-example

./: .gitignore  README.md  noxfile.py  pyproject.toml
dependsonfirst/: README.md  pyproject.toml
dependsonfirst/src/dependsonfirst/: __init__.py
dependsonfirst/test/: test_totology.py
firstpackage/: README.md  pyproject.toml
firstpackage/src/firstpackage/: __init__.py
firstpackage/tests/: test_regression.py
firstpackage/tests/test_regression/: test_regression.yml
