[project]
name = "dependsonfirst"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "firstpackage",
    "click>=8.1.7",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
dependsonfirst-cli = "dependsonfirst:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest==8.0.2",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/dependsonfirst"]
